Correct deprecated calls